# my-sweet-investment-suite

./: LICENSE  README.md  pyproject.toml  settings.json  themes.json
src/: main.py
src/core/: application.py
src/resources/: stylesheet.qss
src/resources/themes/: template.qss
src/services/: data_manager.py  settings.py  workspace.py
src/services/broker/: broker_settings.py
src/services/broker/ib/: ib.py
src/services/broker/simulator/: simulator.py
src/services/logger/: logger.py
src/services/themes/: theme.py  theme_add_dialog.py  theme_list_window.py  theme_manager.py
src/widgets/: base_widget.py  connection.py  custom_button_widget.py  custom_data_widget.py  custom_label_widget.py  custom_tab_widget.py
src/windows/: frameless_window.py  main_window.py  test_window.py
